@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-11-17
+DATE: 11/20/2017
+STAFF: lec
+CHANGES:
+only run /delete/update if there is something in the SQL files
+
 TAG: littriageload-6-0-11-16
 DATE: 11/14/2017
 STAFF: lec
